# shipc

./: CMakeLists.txt  README.md  shipc.sln
shipc/: builtins.c  builtins.h  chunk.c  chunk.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  objects.c  objects.h  shipc.vcxproj  shipc.vcxproj.filters  table.c  table.h  token.c  token.h  value.c  value.h  vm.c  vm.h
